# data-etl

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  compose.sh  config.json  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst
docs/source/api/: chunking_manager.rst  config_manager.rst  document_processor.rst  etl_processor.rst  image_manager.rst  index_manager.rst  markdown_conversion_manager.rst  markdown_manager.rst
mddocs/: Acute_Coronary_Syndromes_(ACS)_2023.md  Acute_Pulmonary_Embolism_2019.md  Adult_Congenital_Heart_Disease_2020.md  Atrial_Fibrillation_2024.md  CVD_Prevention_2021.md  CVD_and_Diabetes_2023.md  Cardiac_Pacing_&_CRT_2021.md  Cardio_oncology_2022.md  Cardiomyopathies_2023.md  Cardiovascular_Diseases_during_Pregnancy_2018.md  Chronic_Coronary_Syndromes_2024.md  Dyslipidaemias_2019.md  ESC:EACTS_Myocardial_Revascularization_2018.md  Elevated_Blood_Pressure_and_Hypertension_2024.md  Endocarditis_2023.md  Focused_Update_on_Heart_Failure_2023.md  Fourth_Universal_Definition_of_Myocardial_Infarction_2018.md  Heart_Failure_2021.md  Non_CardiacSurgery_Cardiovascular_Assessment_and_Management_2022.md  Pericardial_Disease_2018.md  Peripheral_Arterial_&_Aortic_Diseases_2024.md  Pulmonary_Hypertension_2022.md  Sports_Cardiology_and_Exercise_in_Patients_with_CVD_2020.md  Supraventricular_Tachycardia_2019.md  Syncope_2018.md  Valvular_Heart_Disease_2021.md  Ventricular_Arrhythmias_and_the_Prevention_of_Sudden_Cardiac_Death_2022.md
scripts/: data_etl.slurm  hf_init.sh  install.sh  leonardo-how-to.md  main.slurm
src/: converter.py  document_processor.py  embedder.py  etl_processor.py  main.py  other.py  splitter.py  vectorstore.py
src/config/: manager.py
src/managers/: chunking_manager.py  image_manager.py  index_manager.py  markdown_conversion_manager.py  markdown_manager.py
src/utils/: logger.py  singleton.py
