[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "."

[project]
name = "CardiologyGenAI-DataETL"
version = "0.1.0"
description = "Data ETL pipeline for cardiology protocols"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Christian Faccio", email = "christian.faccio@studenti.units.it" },
    { name = "Gaia Saveri", email = "gaia.saveri@gmail.com" }
]

dependencies = [
    "PyMuPDF==1.26.3",
    "pymupdf4llm==0.0.27",
    "faiss-cpu==1.12.0",
    "langchain==0.3.25",
    "qdrant-client==1.15.1",
    "langchain-text-splitters==0.3.9",
    "langchain-huggingface==0.3.1",
    "langchain-qdrant==0.2.0",
    "langchain-experimental==0.3.4",
    "huggingface-hub==0.34.4",
    "pydantic==2.11.7",
    "pillow==11.3.0",
    "sentence-transformers==5.1.0",
    "fastembed==0.7.2",
    "faiss-cpu==1.12.0",
    "pip==25.2",
    "numpy==1.26.4",
    "transformers==4.56.0",
    "langchain-community==0.3.25",
    "langchain-core==0.3.75",
    "cardiologygenai-coordo @ git+https://github.com/cardiology-gen-ai/cardiology-gen-ai.git@main"
]

[project.optional-dependencies]
documentation = [
    "sphinx==7.3.7",
    "sphinxcontrib-mermaid==1.0.0",
    "autodoc-pydantic==2.2.0",
    "sphinx-toolbox==4.0.0",
    "sphinx-book-theme==1.1.4"
]
