[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "."

[project]
name = "CardiologyGenAI-DataETL"
version = "0.1.0"
description = "Data ETL pipeline for cardiology protocols"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Christian Faccio", email = "christian.faccio@studenti.units.it" },
    { name = "Gaia Saveri", email = "gaia.saveri@gmail.com" }
]

dependencies = [
    "PyMuPDF==1.26.3",
    "pymupdf4llm==0.0.27",
    "langchain>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-qdrant>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-core>=1.0.0",
    "huggingface-hub==0.34.4",
    "qdrant-client==1.15.1",
    "faiss-cpu==1.12.0",
    "pydantic==2.11.7",
    "pillow==11.3.0",
    "sentence-transformers==5.1.0",
    "fastembed==0.7.2",
    "faiss-cpu==1.12.0",
    "numpy==1.26.4",
    "transformers==4.56.0",
    "cardiologygenai-coordo @ git+https://github.com/cardiology-gen-ai/cardiology-gen-ai.git@main"
]

[project.optional-dependencies]
documentation = [
    "sphinx==7.3.7",
    "sphinxcontrib-mermaid==1.0.0",
    "autodoc-pydantic==2.2.0",
    "sphinx-toolbox==4.0.0",
    "sphinx-book-theme==1.1.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
